# src/modules/auth/dto/forgot-password.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEmail } from 'class-validator';
+
+export class ForgotPasswordDto {
+  @ApiProperty({ example: 'admin@school.com', format: 'email' })
+  @IsEmail()
+  email!: string;
+}
